--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -36,7 +36,8 @@ h2 {
   border-bottom: solid #cdcdcd 1px;
   padding-top: 10px;
   padding-bottom: 10px;
-  width: 55em;
+  width: 970px;
+  overflow: auto;
 }
 
 .where_clause {
