--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -83,21 +83,12 @@ h2 {
  }
 
 
-label {
-  text-align: center;
-  display: inline-block;
-  width: 7em;
-  font-size: 60%;
-  color: grey;
- }
-
-
 .group_button {display: none;}
 .ungroup_button {display: none;}
 .remove_button {display: none;}
 
 .submit_button {
-  margin-top: 100px;
+  margin-top: 50px;
   display: none;
 }
 
@@ -109,7 +100,7 @@ label {
     width: 15em;
 }
 
-table th {
+.clause_group table th, .joblist table th {
     text-align: left;
     font-weight: bold;
     padding: 5px;
@@ -118,12 +109,12 @@ table th {
 }
 
 
-table td {
+.clause_group table td, .joblist table td {
     padding-bottom: 10px;
     padding-right: 1em;
 }
 
-table td {
+.clause_group table td, .joblist table td {
     padding-bottom: 25px;
 }
 
@@ -133,4 +124,44 @@ table td {
 
 .querysection {
     display: none;
+}
+
+h3 {
+    font-weight: bold;
+    margin-bottom: 10px;
+}
+
+.output_options {
+  margin-top: 50;
+}
+
+.output_options label {
+    width: 10em;
+    font-weight: bold;
+    color: black;
+}
+
+
+.output_options input[type=text] {
+    width: 30em;
+}
+
+.field_options {
+    margin-left: 2em;
+    margin-top: 10px;
+}
+
+label {
+    display: inline-block;
+    width: 7em;
+    vertical-align: top;
+ }
+
+.input_field_container {
+    display: inline-block;
+}
+
+.caption {
+    color: gray;
+    font-size: 60%;
 }
