--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -7,6 +7,11 @@ body {
 
 p { margin-bottom: 1em; }
 
+.logo {
+    margin-top: 10px;
+    margin-bottom: 20px;
+}
+
 h1 {
   font-size: 200%;
   font-weight: bold;
