--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -58,6 +58,11 @@ h4 {
     margin-bottom: 10px;
 }
 
+h5 {
+    font-weight: bold;
+    display: block;
+}
+
 .label {
     display: inline-block;
     width: 4em;
