--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,16 +1,55 @@
-/* my bits */
 body {
-  margin-left: 1em;
-  margin-right: 1em;
-  width: 970px;
-  font-face: sans-serif;
-  line-height: 1.2em;
+    background-color: white;
+    background-color: #f5f5f5;
 }
 
-p { margin-bottom: 1em; margin-top: 1em; }
+.header {
+    background-color: #f5f5f5;
+    border-bottom: solid #e5e5e5 1px;
+    padding-top: 20px;
+    padding-bottom: 10px;
+}
+
+.marcgrep_container {
+    background-color: white;
+    border-left: solid #efefef 1px;
+    border-right: solid #efefef 1px;
+    width: 960px;
+    font-face: sans-serif;
+    line-height: 1.2em;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 1em;
+    padding-right: 2em;
+}
+
+.blurb {
+    padding-bottom: 1em;
+    border-bottom: solid #f5f5f5 1px;
+}
+
+.blurb {
+    color: grey;
+    line-height: 1.5em;
+}
+
+.blurb_text {
+    display: inline-block;
+}
+
+.bulb {
+    position: relative;
+    margin-left: 1em;
+    float: left;
+    display: inline-block;
+    top: 4px;
+    padding-right: 10px;
+}
 
 .logo {
-    margin-top: 10px;
+    width: 960px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 h1 {
@@ -66,6 +105,8 @@ h5 {
 .label {
     display: inline-block;
     width: 4em;
+    padding-right: 5px;
+    text-align: right;
     font-weight: bold;
 }
 
@@ -101,6 +142,8 @@ body > .container {
 
 .and_or_buttons {
   float: right;
+  position: relative;
+  left: 2em;
   margin-top: 20px;
   clear: both;
 }
@@ -196,7 +239,6 @@ input#submit {
 }
 
 table#job_list {
-    width: 95%;
     margin-left: 1em;
     border-bottom: solid #898989 2px;
     margin-bottom: 50px;
