Added support for extended indicator patterns like 245![0-5]#$a
Testing this also flushed out an existing bug in indicator matching: we were only
requiring one of the specified indicators to match, not both.  Yuk.  Boosted
the testing in this area too.

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -163,6 +163,13 @@ body > .container {
   display: inline-block;
 }
 
+#target_field_help table th {
+    font-weight: bold;
+    text-align: left;
+}
+
+
+
 
 .group_button {display: none; float: right;}
 .ungroup_button {display: none; float: right;}
@@ -347,8 +354,9 @@ ul {
 .tagexample {
     font-family: monospace;
     font-size: 120%;
+    padding-right: 2em;
+    white-space: nowrap;
     display: inline-block;
-    width: 5em;
 }
 
 .predicate_choice {
