Absolutely position the bottom bar

--- a/resources/public/css/styles.css
+++ b/resources/public/css/styles.css
@@ -459,13 +459,16 @@ table.cookbook {
 }
 
 .bottom_bar {
-    padding: 10px;
+    padding: 5px;
     text-align: center;
     background-color: black;
     color: #DDD;
     font-size: 110%;
     border-top: solid #c5c5c5 4px;
     border-bottom: solid black 2px;
+    position: fixed;
+    bottom: 0px;
+    width: 100%;
 }
 
 .bottom_bar  a {
